Fix service nav bar buttons rendering with erroneous margin on Safari

--- a/src/Styles/Components/LandingPage/ServicesSection/ServiceAnchorButton.module.css
+++ b/src/Styles/Components/LandingPage/ServicesSection/ServiceAnchorButton.module.css
@@ -19,6 +19,7 @@
     padding: 5px 25px;
     border-radius: 0;
     flex-grow: 1;
+    margin: 0;
 }
 
 .slimButtonStyle:hover {
